so runs on raspi

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,15 @@ version: '3.8'
 services:
   tippspiel:
     build: .
-    ports:
-      - "8080:8080"
     volumes:
       - ./data/tippspiel:/data  # persistente DB
     environment:
       - REL_PATH=/tippspiel
       - DB_FILE=/data/data.db
+      - MIGRATION_FILES_FOLDER=/app/sql
     restart: unless-stopped
+networks:
+  default:
+    name: webapps
+    external: true
+
