--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -9,9 +9,19 @@ services:
       - REL_PATH=/tippspiel
       - DB_FILE=/data/data.db
       - MIGRATION_FILES_FOLDER=/app/sql
+#      - MAIL_PASSWORD=your_password_here
+#      - GROQ_API_KEY=your_api_key_here
     restart: unless-stopped
+    depends_on:
+      - ollama
+  ollama:
+      image: ollama/ollama:0.9.2
+#      ports:
+#        - "11434:11434"
+      volumes:
+        - ./data/ollama_data:/root/.ollama
+      restart: unless-stopped
 networks:
   default:
     name: webapps
     external: true
-
